--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Playfair+Display&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.6/lib/darkmode-js.min.js"></script>
     <title>To do app</title>
   </head>
   <body>
@@ -29,6 +30,11 @@
       </form>
     </header>
     <div class="todo-container"></div>
+    <div class="mobile-logo">
+      <h1 id="logo-text-mobile">
+        todo
+      </h1>
+    </div>
     <script src="./app.js"></script>
   </body>
 </html>
